crates/vite_task_bin/tests/e2e_snapshots/fixtures/exit-codes/snapshots/chained command with && stops at first failure.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
[3]> vt run pkg-a#chained # first fails with exit code 3, second should not run
~/packages/pkg-a$ vtt exit 3
