crates/vite_task_bin/tests/e2e_snapshots/fixtures/exit-codes/snapshots/recursive failure fast-fails and returns task exit code.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
[7]> vp run -r fail --concurrency=1 # fast-fail: only first failure runs
~/packages/pkg-b$ node -e "process.exit(7)"
